<?php namespace ElevatorBundle\Controllers;

use ElevatorBundle\DoorsInterface;

/**
 * Class handle doors logic
 *
 * Class DoorsController
 * @package ElevatorBundle\Controllers
 */
class DoorsController  implements DoorsInterface
{

    /**
     * Open door method
     */
    public function open()
    {

    }

    /**
     * Close door method
     */
    public function close()
    {

    }
}