<?php namespace ElevatorBundle;

/**
 * Interface DoorsInterface
 * @package ElevatorBundle
 */
interface DoorsInterface
{
    public function open();
    public function close();
}
